--- a/site/home/default.html
+++ b/site/home/default.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="../site.css" />
 <link rel="stylesheet" type="text/css" href="home.css" />
 
+<script type="text/javascript" src="http://www.google-analytics.com/ga.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 <script type="text/javascript" src="../lib/quickui.js"></script>
 <script type="text/javascript" src="../lib/quicommon.js"></script>
@@ -20,6 +21,9 @@
 
 <script language="JavaScript">
 $(function() {
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', "UA-11520232-1"]);
+    _gaq.push(['_trackPageview']);
 	$("body").control(HomePage);
 });
 </script>
